cloud-external-file-storage.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nx-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nx-cloud
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      labels:
        app: nx-cloud
    spec:
      containers:
        - name: nx-cloud
          image: nxprivatecloud/nxcloud:next
          ports:
            - containerPort: 8081
