load-balancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nx-cloud-lb-service
  annotations:
    networking.gke.io/load-balancer-type: "External"
  labels:
    app: nx-cloud
spec:
  type: LoadBalancer
  selector:
    app: nx-cloud
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
