ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nx-cloud-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: nx-cloud-ip
    networking.gke.io/managed-certificates: cloud-cert
    kubernetes.io/ingress.class: 'gce'
  labels:
    app: nx-cloud
spec:
  defaultBackend:
    service:
      name: nx-cloud-backend
      port:
        number: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: nx-cloud-backend
  labels:
    app: nx-cloud
spec:
  type: NodePort
  selector:
    app: nx-cloud
  ports:
    - port: 8081
      targetPort: 8081
